# robot-scenario-project

./: .gitignore  baxter.sh
install/: .rosinstall  setup.sh
install/include/intera_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CalibrationCommandAction.h  CalibrationCommandActionFeedback.h  CalibrationCommandActionGoal.h  CalibrationCommandActionResult.h  CalibrationCommandFeedback.h  CalibrationCommandGoal.h  CalibrationCommandResult.h  CameraControl.h  CameraSettings.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndpointNamesArray.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  HomingCommand.h  HomingState.h  IOComponentCommand.h  IOComponentCommandSrvRequest.h  IOComponentCommandSrvResponse.h  IOComponentConfiguration.h  IOComponentStatus.h  IODataStatus.h  IODeviceConfiguration.h  IODeviceStatus.h  IONodeConfiguration.h  IONodeStatus.h  IOStatus.h  InteractionControlCommand.h  InteractionControlState.h  JointCommand.h  (+9 more)
install/include/intera_motion_msgs/: EndpointTrackingError.h  InterpolatedPath.h  JointTrackingError.h  MotionCommandAction.h  MotionCommandActionFeedback.h  MotionCommandActionGoal.h  MotionCommandActionResult.h  MotionCommandFeedback.h  MotionCommandGoal.h  MotionCommandResult.h  MotionStatus.h  TrackingOptions.h  Trajectory.h  TrajectoryAnalysis.h  TrajectoryOptions.h  Waypoint.h  WaypointOptions.h  WaypointSimple.h
install/share/learning_tf/: package.xml
src/: .rosinstall  .rosinstall.bak
src/learning_tf/: #CMakeLists.txt#  CMakeLists.txt
src/r2d2/: CMakeLists.txt  package.xml
src/r2d2/src/: launcher.launch  (+1 more)
src/roadmap_tutorial/: .gitignore  CMakeLists.txt  README.md  package.xml
src/roadmap_tutorial/data/: gui saved voxel file.yaml  params.yaml  voxel_region.yaml
src/roadmap_tutorial/include/roadmap_tutorial/: EdgeChecker.h  IKManager.h  utils.h
src/roadmap_tutorial/launch/: build_roadmap.launch  drag.launch  visualize_scene.launch
src/roadmap_tutorial/src/: EdgeChecker.cpp  IKManager.cpp  build_roadmap.cpp  state_publisher.cpp  utils.cpp  viz_samples.cpp
src/roadmap_tutorial/urdf/: parameters.urdf.xacro  robot.urdf.xacro  scene.urdf  ur5_pick_place.srdf
src/scenario/: CMakeLists.txt  package.xml
src/scenarios/: CMakeLists.txt  package.xml
(+48 files in other folders)
