<?xml version="1.0"?>
<package>
  <name>roadmap_tutorial</name>
  <version>0.0.0</version>
  <description>This package is part of a tutorial to show ways of generating useful roadmaps</description>

  <maintainer email="sean@rtr.ai">Sean Murray</maintainer>

  <license>Proprietary - Realtime Robotics</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <build_depend>boost</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>pr2_description</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>xacro</run_depend>


</package>
